# ml-wip

./: .gitignore  README.md
AI_comment/: .gitignore  philo.bib  slides.tex  text.tex
Ares-EDAR-data/: 20150406-175305.rnasa  20150406-180930.rnasa  20150407-115418.rnasa  20150407-115739clean.csv  20150407-120936.rnasa  20150407-124902.rnasa  20150407-130802.rnasa  20150407-132225.rnasa  20150408-104205.rnasa  20150408-105137.rnasa  20150408-105248clean.csv  20150408-110248.rnasa  20150408-112034.rnasa  20150427-155101clean.csv  20150427-160108.rnasa  Ares_test.csv  WekaPerceptronParams1stTest  WekaPerceptronParams1stTest.model  WekaPerceptronParams1stTest.results  ares_analytics.py  ares_cleaner.py  results
CV/: Pedro_Montoto_GarcÃ­a.synctex.gz(busy)  Pedro_Montoto_García.tex
Haskell-exercises/: .gitignore  Haskell-exercises.cabal
Haskell-exercises/app/: Main.hs
Haskell-exercises/src/: Collatz.hs  Euler.hs  Lib.hs  Wittgenstein.hs
graph-example/: .graph.py.swp  graph.py
krstyletransfer/: Cargo.toml
krstyletransfer/src/: average.rs  checkloc.rs  main.rs  pdxdoc-lalrpop.rs  pdxdoc.lalrpop
pmgai-course-exercises/: Unit1.1-Architecting-HAL9000.txt  Unit1.2-Interfacing-with-HAL9000.txt  Unit1.3-HAL9000-thought-processes.txt
prime-spaces/: Collatz_in_Prime_Spaces.tex
twitter_analysis_galiza/: .index.js.swp  analitics.ods  analysis_lang.sh  index.js  package.json  process_gb_lang.js  results  results_gb_search.json  results_me  results_words_gb.csv  search_by_term.js  search_by_twitter_id.js  search_compile_language_by_term.js
(+3 files in other folders)
