[package]
name = "kr_style_transfer"
version = "0.1.0"
authors = ["McOmghall <pmgberm@gmail.com>"]
edition = "2018"
build = "src/pdxdoc-lalrpop.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
regex = "1"
rust_decimal = "1.8.1"

[build-dependencies.lalrpop]
version = "0.19.1"
features = ["lexer"]

[dependencies]
log = "0.4.11"
simplelog = "0.8.0"
walkdir = "2.3.1"
image = "0.23.10"
imageproc = "0.21.0"
rand = "0.7.3"
clap = "3.0.0-beta.2"
regex = "1"
lalrpop-util = "0.19.0"
decimal = "2.0.4"
rayon = "1.4.1"